# FFmpegPlayer

./: .clang-format  .gitignore  .gitmodules  Anime4KCPPCore.vcxproj  Anime4KCPPCore.vcxproj.filters  Player.sln  README.md  edit_git_subst_cfg.cmd  getYoutubeCombined.py  getYoutubeUrl.py  remove_pytube.cmd  remove_youtube_transcript_api.cmd
.github/workflows/: msbuild.yml
Dlls/: Dlls.csproj
HttpDownload/: HttpDownload.cpp  HttpDownload.vcxproj  HttpDownload.vcxproj.filters  ReadMe.txt  stdafx.cpp
Player/: AsyncGetUrlUnderMouseCursor.cpp  AsyncGetUrlUnderMouseCursor.h  AudioPitchDecorator.cpp  AudioPitchDecorator.h  AudioPlayerImpl.cpp  AudioPlayerImpl.h  AudioPlayerWasapi.cpp  AudioPlayerWasapi.h  ByteStreamBuffer.h  D3DFONT.CPP  D3DFONT.H  D3DUTIL.CPP  D3DUTIL.H  DXUTIL.CPP  DialogBarPlayerControl.cpp  DialogBarPlayerControl.h  DialogBarRange.cpp  DialogBarRange.h  DialogOpenURL.cpp  DialogOpenURL.h  DialogVideoFilter.cpp  DialogVideoFilter.h  EditTime.cpp  EditTime.h  FrameToHglobal.cpp  FrameToHglobal.h  FrameTransformer.cpp  FrameTransformer.h  GetClipboardText.h  HandleFilesSequence.cpp  HandleFilesSequence.h  I420Effect.cpp  I420Effect.h  I420Effect_PS.hlsl  IEraseableArea.h  ImageUpscale.cpp  ImageUpscale.h  MainFrm.cpp  MainFrm.h  MakeDelegate.h  (+31 more)
Player/res/: Player.rc2  launch.mkv
QtPlayer/: .gitignore  CMakeLists.txt  customdockwidget.cpp  customdockwidget.h  ffmpegdecoder.cpp  ffmpegdecoder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mousehoverbutton.cpp  mousehoverbutton.h  opengldisplay.cpp  opengldisplay.h  overlay.cpp  overlay.h  portaudioplayer.cpp  portaudioplayer.h  spinner.cpp  spinner.h  videocontrol.cpp  videocontrol.h  videocontrol.ui  videodisplay.cpp  videodisplay.h  videoplayer.cpp  videoplayer.h  videoplayerwidget.cpp  videoplayerwidget.h  videoprogressbar.cpp  videoprogressbar.h  videowidget.cpp  videowidget.h  volumeprogressbar.cpp  volumeprogressbar.h  widgetdisplay.cpp  widgetdisplay.h
QtPlayer/resources/: resources.qrc  style.css  win7.manifest  winres.rc.in
Setup/: Setup.vdproj
ToUTF8/: ToUTF8.cpp  ToUTF8.vcxproj  ToUTF8.vcxproj.filters
audio/: AudioPitchDecorator.cpp  AudioPitchDecorator.h  AudioPlayerImpl.cpp  AudioPlayerImpl.h  AudioPlayerWasapi.cpp  AudioPlayerWasapi.h  ReadMe.txt  audio.vcxproj  audio.vcxproj.filters  smbPitchShift.cpp
core/: ac_export.h
ffmpeg-3.3.3-experimental-patch/: common.h  hevcdsp_template.c
ffmpeg-4.3.2-experimental-patch/: common.h  hevcdsp_template.c
networking/: ReadMe.txt  http_download.cpp  http_download.h  http_get.cpp  http_get.h  httpioapi.cpp  httprequest_i.c  ioapi.h  networking.vcxproj  networking.vcxproj.filters  unzip.c
unzip/: crypt.h  httprequest_h.h  unzip.c  unzip.h  unzip.vcxproj  unzip.vcxproj.filters
video/: audioparserunnable.cpp  audioparserunnable.h  audioplayer.h  decoderinterface.h  decoderiocontext.cpp  decoderiocontext.h  displayrunnable.cpp  displayrunnable.h  ffmpeg_dxva2.cpp  ffmpeg_dxva2.h  ffmpegdecoder.cpp  ffmpegdecoder.h  fqueue.h  interlockedadd.h  makeguard.h  ordered_scoped_token.h  ordered_scoped_token.hpp  parserunnable.cpp  parserunnable.h  subtitles.cpp  subtitles.h  video.vcxproj  video.vcxproj.filters  videoframe.h  videoparserunnable.cpp  videoparserunnable.h  vqueue.h
